currentUser, add haveAccounts to response
